--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
