--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0"
   }
 }
